--- a/WebshopFrontend/Components/Components/BoardgameDetails.razor
+++ b/WebshopFrontend/Components/Components/BoardgameDetails.razor
@@ -1,6 +1,6 @@
 ﻿<div class="product-grid-item-description padding-x padding-y">
     <hr/>
-    <GameProperties Boardgame="@Boardgame"></GameProperties>
+    <BoardgameProperties Boardgame="@Boardgame"></BoardgameProperties>
     <hr/>
     <p class="padding-y">@Boardgame.BoardgameDetails.Description</p>
 </div>
