--- a/WebshopFrontend/Components/Components/ProductHeading.razor
+++ b/WebshopFrontend/Components/Components/ProductHeading.razor
@@ -1,12 +1,12 @@
 ﻿<div class="product-grid-item-product padding-x padding-y">
-    <h1>@Boardgame.Name</h1>
+    <h1>@Product.Name</h1>
     <hr/>
     <div class="text-gray">
-        <span>@Boardgame.ArtNr</span>
-        <span>@Boardgame.Publisher.Name</span>
+        <span>@Product.ArtNr</span>
+        <span>@Product.Publisher.Name</span>
     </div>
 </div>
 
 @code {
-    [Parameter] public required BoardgameDto Boardgame { get; set; }
+    [Parameter] public required IProduct Product { get; set; }
 }
