--- a/WebshopFrontend/Components/App.razor
+++ b/WebshopFrontend/Components/App.razor
@@ -21,6 +21,7 @@
     <Routes @rendermode="InteractiveServer"/>
     <script src="_framework/blazor.web.js"></script>
     <script src="@Assets["app.js"]"></script>
+    <script src="@Assets["cart.js"]"></script>
 </body>
 
 </html>
