--- a/WebshopFrontend/Components/Components/AddToCartButton.razor
+++ b/WebshopFrontend/Components/Components/AddToCartButton.razor
@@ -1,28 +1,38 @@
 ﻿@using WebshopFrontend.EventHandlers
+@using WebshopFrontend.Services
+@using WebshopFrontend.Services.Interfaces
 @rendermode InteractiveServer
 @inject IJSRuntime Js
-@inject NotifyCartUpdated NotifyCartUpdated
+@inject ICounterService CartCounterService
+@inject ICartService CartService
 
 <button class="@GetButtonClasses()" @onclick="AddToCart">
     <span>@GetButtonText()</span>
 </button>
 
 @code {
-    [Parameter] public required IProduct Product { get; set; }
+    [Parameter] public required int ProductId { get; set; }
+    [Parameter] public required int Stock { get; set; }
+
+    private int _quantity = 1;
 
     private async Task AddToCart()
     {
-        await Js.InvokeVoidAsync("AddProductToLocalStorage", Product.ArtNr);
-        NotifyCartUpdated.NotifyCartUpdate(this);
+        var cartItem = await CartService.AddItem(new CartItemToAddDto { ProductId = ProductId, Quantity = _quantity, CartId = GetCartId() });
+        CartCounterService.AddToCount(_quantity);
     }
 
-    private string GetButtonText() => Product.Stock.Quantity > 0 ? "Buy" : "Reserve";
+    private int GetCartId() => 1;
+
+    private string GetButtonText() => Stock > 0 ? "Buy" : "Reserve";
 
     private string GetButtonClasses()
     {
         const string defaultClasses = "text-center text-xlarge text-bold button-block";
-        var addedClass = Product.Stock.Quantity > 0 ? " button-buy" : " button-reserve";
+        var addedClass = Stock > 0 ? " button-buy" : " button-reserve";
 
         return defaultClasses + addedClass;
     }
+
+
 }
