--- a/WebshopFrontend/Components/Components/CheckoutProductTable.razor
+++ b/WebshopFrontend/Components/Components/CheckoutProductTable.razor
@@ -1,10 +1,14 @@
 ﻿@using System.Text.Json
 @using WebshopFrontend.Components.Components
 @using WebshopFrontend.EventHandlers
+@using WebshopFrontend.Services.Interfaces
+@using WebshopFrontend.Services
 @inject NotifyCartUpdated NotifyCartUpdated
 @rendermode InteractiveServer
 @inject IJSRuntime Js
 @inject IHttpClientFactory Http
+@inject ICounterService CounterService
+@inject ICartService CartService
 
 @if (Products.Any())
 {
