--- a/WebshopFrontend/Components/Pages/Checkout.razor
+++ b/WebshopFrontend/Components/Pages/Checkout.razor
@@ -1,10 +1,14 @@
 ﻿@page "/checkout"
 @using WebshopFrontend.Components.Components
 @using WebshopFrontend.EventHandlers
+@using WebshopFrontend.Services
+@using WebshopFrontend.Services.Interfaces
 @inject OrderState OrderState
 @inject NavigationManager NavigationManager
 @inject IJSRuntime Js
 @inject NotifyCartUpdated NotifyCartUpdated
+@inject ICounterService CounterService
+@inject ICartService CartService
 @implements IDisposable
 
 <h3>Checkout</h3>
